--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@reduxjs/toolkit": "^2.5.0",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
