--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.12.4",
     "@eslint/js": "^9.17.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
@@ -26,6 +27,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-redux": "^7.1.34",
