--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://magistr25.github.io/my-feed/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "deploy": "tsc -b && vite build && gh-pages -d dist"
+
   },
   "dependencies": {
     "@apollo/client": "^3.12.4",
     "@eslint/js": "^9.17.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "gh-pages": "^6.3.0",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.6.0",
@@ -43,8 +47,10 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
+    "rollup": "3.29.4",
     "sass": "^1.83.1",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-gh-pages": "^1.0.1"
   }
 }
